<resources>
    <string name="app_name">Telegram</string>
    <string name="q1">Создать группу</string>
    <string name="q2">Создать секретный чат</string>
    <string name="q3">Создать канал</string>
    <string name="q4">Контакты</string>
    <string name="q5">Звонки</string>
    <string name="q6">Избранные</string>
    <string name="q7">Настройки</string>
    <string name="q8">Пригласить друзей</string>
    <string name="q9">Помощь</string>
    <string name="Test_name">Nikita Turovets</string>
    <string name="Test_Phone">+375293119009</string>

    <!-- Fragment Settings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userIn">в сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_tap_to_change_phone_number">Нажмите, чтобы изменить номер телефона</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="settings_menu_title">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_sent">Мы отправили СМС с кодом проверки на ваш телефон:</string>
    <string name="register_hint_default_code">- - - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
</resources>
