<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settigs_header_block"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_user_photo"
            android:layout_width="@dimen/settings_user_photo"
            android:layout_height="@dimen/settings_user_photo"
            android:layout_marginStart="@dimen/common_margin_16_horizontal"
            android:src="@drawable/def"
            app:civ_border_color="#FF000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin_16_horizontal"
            android:layout_marginTop="@dimen/common_margin_vertical_10"
            android:text="@string/Test_name"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/common_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/settings_user_photo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin_16_horizontal"
            android:text="@string/userIn"
            android:textColor="@color/colorAccentDark"
            android:textSize="@dimen/small_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/settings_user_photo"
            app:layout_constraintTop_toBottomOf="@id/settings_username" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settings_text_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_margin_16_horizontal"
        android:layout_marginTop="@dimen/vertical_large_margin_16"
        android:text="@string/settings_text_account"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/small_text"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/settigs_header_block" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_phone_number"
        style="@style/settings_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_text_account">

        <TextView
            android:id="@+id/settings_phone_number"
            style="@style/normal_text"
            android:text="@string/Test_Phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_phone_number" />

        <TextView
            android:id="@+id/label_phone_number"
            style="@style/small_text"
            android:text="@string/settings_tap_to_change_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_phone_number" />

        <View
            style="@style/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_phone_number" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_login"
        style="@style/settings_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_phone_number">

        <TextView
            android:id="@+id/settings_login"
            style="@style/normal_text"
            android:text="@string/Test_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_login" />

        <TextView
            android:id="@+id/label_login"
            style="@style/small_text"
            android:text="@string/settings_label_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_login" />

        <View
            style="@style/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_btn_change_bio"
        style="@style/settings_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_btn_change_login">

        <TextView
            android:id="@+id/settings_bio"
            style="@style/normal_text"
            android:text="@string/settings_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/settings_btn_change_bio" />

        <TextView
            android:id="@+id/label_bio"
            style="@style/small_text"
            android:text="@string/settings_label_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_bio" />

        <View
            style="@style/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_bio" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_change_photo"
        android:layout_width="@dimen/settings_btn_change_photo"
        android:layout_height="@dimen/settings_btn_change_photo"
        android:src="@drawable/ic_camera"
        app:civ_border_color="@color/colorGrey"
        android:layout_marginEnd="@dimen/common_margin_16_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/settings_text_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settigs_header_block" />

</androidx.constraintlayout.widget.ConstraintLayout>