<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EnterCodeFragment">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_large_margin_16"
        android:src="@drawable/ic_register_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_text_enter_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_text_enter_code"
        android:textColor="@color/md_black_1000"
        android:textSize="@dimen/common_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_image" />

    <TextView
        android:id="@+id/register_text_we_sent"
        style="@style/small_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/common_margin_vertical_10"
        android:gravity="center"
        android:text="@string/register_text_we_sent"
        app:layout_constraintTop_toBottomOf="@id/register_text_enter_code" />

    <EditText
        android:hint="@string/register_hint_default_code"
        android:id="@+id/register_input_code"
        style="@style/edit_text"
        android:gravity="center"
        android:maxLength="7"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text_we_sent" />
</androidx.constraintlayout.widget.ConstraintLayout>